Fixes issue with z-indexes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,6 +84,7 @@ header {
   position: sticky;
   top: 0;
   width: 100%;
+  z-index: 1;
 }
 
 header > div.container {
